--- a/모두의기타.html
+++ b/모두의기타.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>모두의 기타</title>
+        <title>모두의기타</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="모두의기타.html">모두의기타</a></h1>
+        <h1><a href="modu.html">모두의기타</a></h1>
             <ol>
-                <li><a href="기타.html">기타</a></li>
-                <li><a href="대여.html">대여</a></li>
-                <li><a href="가격.html">가격</a></li>
+                <li><a href="guitar.html">기타</a></li>
+                <li><a href="dae.html">대여</a></li>
+                <li><a href="ga.html">가격</a></li>
             </ol>
 
         <h4>                  
