--- a/대여.html
+++ b/대여.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>모두의 기타</title>
+        <title>모두의 기타 - 대여</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="모두의기타.html">모두의기타</a></h1>
+        <h1><a href="index.html">모두의기타</a></h1>
             <ol>
                 <li><a href="기타.html">기타</a></li>
                 <li><a href="대여.html">대여</a></li>
                 <li><a href="가격.html">가격</a></li>
             </ol>
+            <h2>대여</h2>
+       
 
-        <h4>                  
-             <strong>기타 종류</strong>는 
-             <u>저가부터 고가까지</u>  다양하게 있으며 평소에 부담되셨던 해외 모델까지 경험해 보실 수 있습니다       
-         </h4>
-
-            <h2><a href="https://ko.wiktionary.org/wiki/%EB%8C%80%EC%97%AC%ED%95%98%EB%8B%A4">
-                대여</a>
-                </h2>
                 <img src="guitar.jpg" width="30%">
-            <h4>하루에 10000원</h4>
 
 
 
