--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>모두의 기타 - 기타</title>
+        <title>모두의 기타에 반갑습니다</title>
         <meta charset="utf-8">
     </head>
     <body>
@@ -11,8 +11,12 @@
                 <li><a href="대여.html">대여</a></li>
                 <li><a href="가격.html">가격</a></li>
             </ol>
+        <h2>모두의기타</h2>
+        <h4>                  
+             <strong>기타 종류</strong>는 
+             <u>저가부터 고가까지</u>  다양하게 있으며 평소에 부담되셨던 해외 모델까지 경험해 보실 수 있습니다       
+         </h4>
 
-        <h2>기타</h2>
                 <img src="guitar.jpg" width="30%">
 
 
